# KULLM-Pro

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_DEPLOYMENT_GUIDE.md  LICENSE  README.md  code_switch.py  code_switch.txt  config.yaml  fine_tune.py  pyproject.toml  requirements.txt  run.sh  setup.py  system_prompt.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: train_with_think_tokens.yaml
docs/: LONG_CONTENT_GUIDE.md
examples/: README.md  config_long_content.yaml  config_small_model.yaml  system_prompt_simple.txt
kullm_pro/: __init__.py
kullm_pro/code_switching/: __init__.py  dataset_processor.py  openai_client.py  pipeline.py
kullm_pro/fine_tuning/: __init__.py  data_processor.py  pipeline.py  trainer.py
kullm_pro/utils/: __init__.py  config.py  helpers.py  logging.py
scripts/: README.md  chat.py
src/: __init__.py  code_switch.py  fine_tune.py
src/utils/: __init__.py  clean_tokenizer.py  data_processing.py  format_think_data.py  model_utils.py
tests/: __init__.py  conftest.py  test_basic.py  test_utils.py
tools/: merge_lora.py
